# quadruped-sim

./: .gitignore  Dockerfile  README.md  build.sh  docker-compose.yml  install.sh  run.sh
quadruped_sim/: CMakeLists.txt
quadruped_sim/models/: CMakeLists.txt
quadruped_sim/models/meshes/: mini_abad.dae  mini_body.dae  mini_lower_link.dae  mini_lower_link.stl  mini_upper_link.dae  mini_upper_link.stl
quadruped_sim/models/urdf/: spirit_drake.urdf
quadruped_sim/models/xml/: spirit.xml
quadruped_sim/src/: Application.cpp  Application.h  Input.cpp  Input.h  InputController.cpp  InputController.h  QuadrupedSim.cpp  QuadrupedSim.h  SimulationConfig.h  main.cpp
quadruped_sim/src/controllers/: BaseController.cpp  BaseController.h  CMakeLists.txt  Controller.cpp  Controller.h  MPCController.cpp  MPCController.h  QuadrupedController.cpp  QuadrupedController.h
